Paginate and sort server side on the comments list view

--- a/src/app/components/views/comments/comments-list/comments-list.component.html
+++ b/src/app/components/views/comments/comments-list/comments-list.component.html
@@ -51,11 +51,13 @@
             [loadingIndicator]="true"
             [selectionType]="SelectionType.multi"
             [externalPaging]="true"
+            [externalSorting]="true"
             [count]="page.totalElements"
             [offset]="page.pageNumber"
             [limit]="page.size"
             (select)="onSelect($event)"
-            (page)="setPage($event)">
+            (page)="setPage($event)"
+            (sort)="onSort($event)">
             <ngx-datatable-column name="Name" headerClass="header"></ngx-datatable-column>
             <ngx-datatable-column name="Phones" headerClass="header"></ngx-datatable-column>
             <ngx-datatable-column name="Address" headerClass="header"></ngx-datatable-column>
