--- a/src/app/components/modals/season-modal/season-modal.component.html
+++ b/src/app/components/modals/season-modal/season-modal.component.html
@@ -1,6 +1,6 @@
 <div bsModal #seasonModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
-  <div class="modal-dialog modal-main" role="document">
+  <div class="modal-dialog modal-main modal-md" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title">New season</h4>
@@ -9,7 +9,53 @@
         </button>
       </div>
       <div class="modal-body">
-        <form [formControl]="seasonForm"></form>
+        <form [formGroup]="seasonForm">
+          <table class="table table-bordered outer-table">
+            <tbody>
+            <tr>
+              <td>Name</td>
+              <td class="flex-wrap-row">
+                <div class="bg-danger"
+                     *ngIf="seasonForm.get('name').hasError('required') && seasonForm.get('name').touched">
+                  This field is required
+                </div>
+                <input type="text" class="form-control" formControlName="name"></td>
+            </tr>
+            <tr>
+              <td>Season Ranges</td>
+              <td>
+                <table class="table table-sm table-borderless inner-table">
+                  <tbody>
+                  <tr *ngFor="let seasonRange of seasonForm.controls['seasonRanges']['controls']; let i = index;">
+                    <td>
+                      <div class="bg-danger"
+                           *ngIf="seasonRange.get('range').hasError('required') && seasonRange.get('range').touched">
+                        This field is required
+                      </div>
+                      <div class="flex-box">
+                        <input type="text" style="text-align: center" class="form-control" bsDaterangepicker
+                               [formControl]="seasonRange.controls['range']">
+                        <button *ngIf="seasonForm.controls['seasonRanges']['controls'].length > 1"
+                                class="btn btn-danger"
+                                (click)="deleteSeasonRangeAtIndex(i)">Delete
+                        </button>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <button style="width: 100%" class="btn btn-ghost-primary" (click)="addSeasonRange()">
+                        Add range
+                      </button>
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="seasonModal.hide()">Cancel</button>
