--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "~@swimlane/ngx-datatable/index";
 @import '~@swimlane/ngx-datatable/themes/bootstrap';
 @import '~@swimlane/ngx-datatable/assets/icons.css';
+@import '~ngx-bootstrap/datepicker/bs-datepicker';
 
 // If you want to add something do it here
 @import "custom";
