Create pipe to filter homestay prices and show only non-default seasons

--- a/src/app/components/views/houses/houses-add-edit/houses-add-edit.component.html
+++ b/src/app/components/views/houses/houses-add-edit/houses-add-edit.component.html
@@ -200,7 +200,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr *ngFor="let housePriceForm of houseForm.controls['homestayPrices']['controls']">
+                    <tr *ngFor="let housePriceForm of houseForm.controls['homestayPrices']['controls'] | seasonScrub">
                       <td>
                         <table class="table table-sm table-borderless inner-table">
                           <tr
