Fix issue with multiple subscriptions to modal onHidden action

--- a/src/app/components/views/houses/houses-add-edit/houses-add-edit.component.html
+++ b/src/app/components/views/houses/houses-add-edit/houses-add-edit.component.html
@@ -221,7 +221,7 @@
                     <tfoot>
                     <tr>
                       <td colspan="2">
-                        <button style="width: 100%" class="btn btn-ghost-primary" (click)="openNewSeasonModal()">
+                        <button type="button" style="width: 100%" class="btn btn-ghost-primary" (click)="openNewSeasonModal()">
                           New season
                         </button>
                       </td>
@@ -241,5 +241,3 @@
     </div>
   </div>
 </div>
-
-<app-season-modal #seasonModalComponent></app-season-modal>
