--- a/src/app/components/modals/season-modal/season-modal.component.html
+++ b/src/app/components/modals/season-modal/season-modal.component.html
@@ -1,66 +1,59 @@
-<div bsModal #seasonModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true">
-  <div class="modal-dialog modal-main modal-md" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">New season</h4>
-        <button type="button" class="close" (click)="seasonModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form [formGroup]="seasonForm">
-          <table class="table table-bordered outer-table">
+<div class="modal-header">
+  <h4 class="modal-title">New season</h4>
+  <button type="button" class="close" (click)="bsModalRef.hide()" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <form [formGroup]="seasonForm">
+    <table class="table table-bordered outer-table">
+      <tbody>
+      <tr>
+        <td>Name</td>
+        <td class="flex-wrap-row">
+          <div class="bg-danger"
+               *ngIf="seasonForm.get('name').hasError('required') && seasonForm.get('name').touched">
+            This field is required
+          </div>
+          <input type="text" class="form-control" formControlName="name"></td>
+      </tr>
+      <tr>
+        <td>Season Ranges</td>
+        <td>
+          <table class="table table-sm table-borderless inner-table">
             <tbody>
-            <tr>
-              <td>Name</td>
-              <td class="flex-wrap-row">
+            <tr *ngFor="let seasonRange of seasonForm.controls['seasonRanges']['controls']; let i = index;">
+              <td>
                 <div class="bg-danger"
-                     *ngIf="seasonForm.get('name').hasError('required') && seasonForm.get('name').touched">
+                     *ngIf="seasonRange.get('range').hasError('required') && seasonRange.get('range').touched">
                   This field is required
                 </div>
-                <input type="text" class="form-control" formControlName="name"></td>
+                <div class="flex-box">
+                  <input type="text" style="text-align: center" class="form-control" bsDaterangepicker
+                         [formControl]="seasonRange.controls['range']">
+                  <button *ngIf="seasonForm.controls['seasonRanges']['controls'].length > 1"
+                          class="btn btn-danger"
+                          (click)="deleteSeasonRangeAtIndex(i)">Delete
+                  </button>
+                </div>
+              </td>
             </tr>
             <tr>
-              <td>Season Ranges</td>
               <td>
-                <table class="table table-sm table-borderless inner-table">
-                  <tbody>
-                  <tr *ngFor="let seasonRange of seasonForm.controls['seasonRanges']['controls']; let i = index;">
-                    <td>
-                      <div class="bg-danger"
-                           *ngIf="seasonRange.get('range').hasError('required') && seasonRange.get('range').touched">
-                        This field is required
-                      </div>
-                      <div class="flex-box">
-                        <input type="text" style="text-align: center" class="form-control" bsDaterangepicker
-                               [formControl]="seasonRange.controls['range']">
-                        <button *ngIf="seasonForm.controls['seasonRanges']['controls'].length > 1"
-                                class="btn btn-danger"
-                                (click)="deleteSeasonRangeAtIndex(i)">Delete
-                        </button>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <button style="width: 100%" class="btn btn-ghost-primary" (click)="addSeasonRange()">
-                        Add range
-                      </button>
-                    </td>
-                  </tr>
-                  </tbody>
-                </table>
+                <button style="width: 100%" class="btn btn-ghost-primary" (click)="addSeasonRange()">
+                  Add range
+                </button>
               </td>
             </tr>
             </tbody>
           </table>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="seasonModal.hide()">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="onCreate()">Create</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </form>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-secondary" (click)="onCancel()">Cancel</button>
+  <button type="button" class="btn btn-primary" (click)="onConfirm()">Confirm</button>
+</div>
