--- a/src/app/components/views/comments/comments-list/comments-list.component.scss
+++ b/src/app/components/views/comments/comments-list/comments-list.component.scss
@@ -15,10 +15,35 @@
       padding-right: 20px;
     }
 
+    .ngx-datatable.bootstrap .center-align,
+    .ngx-datatable.bootstrap .datatable-body .datatable-body-row .datatable-body-cell.center-align, {
+      text-align: center;
+      padding-right: 20px;
+    }
+
     .ngx-datatable.bootstrap .datatable-footer {
       background: #f8f9fa;
       color: black;
       margin-top: -1px;
+    }
+
+    .ngx-datatable.bootstrap .checkbox-cell {
+      font-size: 16px;
+      line-height: 0;
+      display: flex;
+      justify-content: space-around;
+
+      .ngx-checkbox {
+        width: 18px !important;
+        height: 18px !important;
+        line-height: 0 !important;
+        cursor: default !important;
+        border: 1px solid #7EAD3B !important;
+
+        .ngx-icon-checkbox {
+          color: #7EAD3B !important;
+        }
+      }
     }
 
     .ngx-datatable.bootstrap .resize-handle {
