Add a standard user avatar image

--- a/src/app/components/shared/owner-card/owner-card.component.html
+++ b/src/app/components/shared/owner-card/owner-card.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     <div style="text-align: center">Manager</div>
     <div class="avatar-container">
-      <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com"/>
+      <img src="../../../../assets/img/avatars/standard_user-512.png" class="img-avatar"/>
     </div>
   </div>
   <div class="card-body manager-info">
